--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,20 @@
 name: 🚀 CI - Deploy
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["🧪 CI - Check"]
+    types:
+      - completed
 jobs:
   deploy:
+    if: >
+      github.event.workflow_run.head_branch == 'main' &&
+      github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
+      id-token: write
     steps:
       - name: 📥 Checkout repository
         uses: actions/checkout@v4
@@ -31,9 +40,3 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: semantic-release
-      # - name: 🔁 Sync changes to develop
-      #   uses: cyberskill-world/.github/actions/merge-branch@main
-      #   with:
-      #     GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      #     FROM: main
-      #     TO: develop
