--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,12 @@
 name: 🚀 CI - Deploy
 on:
   workflow_run:
-    workflows: ["🧪 CI - Check"]
+    workflows: ["🛠️ CI - Pre-deploy"]
     types:
       - completed
 jobs:
   deploy:
     if: >
-      github.event.workflow_run.head_branch == 'main' &&
       github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     steps:
@@ -17,12 +16,6 @@ jobs:
           ref: release
       - name: 🔧 Setup Environment and Dependencies
         uses: cyberskill-world/.github/actions/env-deps@main
-      - name: 🔄 Merge main into release
-        uses: cyberskill-world/.github/actions/merge-branch@main
-        with:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          FROM: main
-          TO: release
       - name: 🚧 Build project
         run: |
           pnpm build
