--- a/.github/workflows/2. pre-deploy.yml
+++ b/.github/workflows/2. pre-deploy.yml
@@ -1,18 +1,19 @@
-name: 🔄 CI - Sync
+name: 🔄 CI - Pre-deploy
 on:
   workflow_run:
-    workflows: ["🚀 CI - Deploy"]
+    workflows: ["🧪 CI - Check"]
     types:
       - completed
 jobs:
-  sync:
+  deploy:
     if: >
+      github.event.workflow_run.head_branch == 'main' &&
       github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout repository
         uses: actions/checkout@v4
-      - name: 🔄 Merge release into main
+      - name: 🔄 Merge main into release
         uses: cyberskill-world/.github/actions/merge-branch@main
         with:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
