--- a/.github/workflows/2. pre-deploy.yml
+++ b/.github/workflows/2. pre-deploy.yml
@@ -5,7 +5,7 @@ on:
     types:
       - completed
 jobs:
-  deploy:
+  pre-deploy:
     if: >
       github.event.workflow_run.head_branch == 'main' &&
       github.event.workflow_run.conclusion == 'success'
