--- a/.github/workflows/2. sync.yml
+++ b/.github/workflows/2. sync.yml
@@ -1,11 +1,11 @@
-name: 🔄 CI - Pre-deploy
+name: 🔄 CI - Sync
 on:
   workflow_run:
     workflows: ["🧪 CI - Check"]
     types:
       - completed
 jobs:
-  pre-deploy:
+  sync:
     if: >
       github.event.workflow_run.head_branch == 'main' &&
       github.event.workflow_run.conclusion == 'success'
