--- a/.github/workflows/3. deploy.yml
+++ b/.github/workflows/3. deploy.yml
@@ -20,14 +20,7 @@ jobs:
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
       - name: 🔗 Install semantic-release globally
         run: |
-          pnpm install --global semantic-release@24.2.3 \
-            @semantic-release/changelog@6.0.2 \
-            @semantic-release/git@10.0.1 \
-            @semantic-release/github@11.0.1 \
-            @semantic-release/npm@12.0.1 \
-            @semantic-release/commit-analyzer@13.0.1 \
-            @semantic-release/release-notes-generator@14.0.3 \
-            conventional-changelog-conventionalcommits@latest
+          pnpm install --global semantic-release@latest
       - name: 🚀 Deploy
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
