--- a/.github/workflows/2. sync.yml
+++ b/.github/workflows/2. sync.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   sync:
     if: >
-      github.event.workflow_run.head_branch == 'main' &&
+      github.event.workflow_run.head_branch == 'release' &&
       github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     steps:
