--- a/.github/workflows/3. deploy.yml
+++ b/.github/workflows/3. deploy.yml
@@ -1,10 +1,17 @@
 name: 🚀 CI - Deploy
 on:
-  push:
-    branches:
-      - release
+  # push:
+  #   branches:
+  #     - release
+  workflow_run:
+    workflows: ["🧪 CI - Check"]
+    types:
+      - completed
 jobs:
   deploy:
+    if: >
+      github.event.workflow_run.head_branch == 'main' &&
+      github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout repository
@@ -24,9 +31,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: semantic-release
-      - name: 🔄 Merge release into main
-        uses: cyberskill-world/.github/actions/merge-branch@main
-        with:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          FROM: release
-          TO: main
+      # - name: 🔄 Merge release into main
+      #   uses: cyberskill-world/.github/actions/merge-branch@main
+      #   with:
+      #     GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      #     FROM: release
+      #     TO: main
