--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,7 +5,14 @@ on:
       - main
   pull_request:
     branches:
-      - '*'
+      - "*"
 jobs:
   check:
-    uses: cyberskill-world/.github/.github/workflows/check.yml@main
+    runs-on: ubuntu-latest
+    steps:
+      - uses: cyberskill-world/.github/.github/workflows/check.yml@main
+      - name: 📤 Upload build or dist folder as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: BUILD_ARTIFACT
+          path: dist
