--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,19 @@
-name: 🚀 CI - Deploy
 on:
-  workflow_run:
-    workflows: ["🧪 CI - Check"]
-    types:
-      - completed
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - "*"
 jobs:
+  check:
+    name: 🧪 Check
+    uses: cyberskill-world/.github/.github/workflows/check.yml@main
   deploy:
+    name: 🚀 Deploy
+    needs: check
     if: >
-      github.event.workflow_run.head_branch == 'main' &&
-      github.event.workflow_run.conclusion == 'success'
+      github.event.workflow_run.head_branch == 'main
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout repository
@@ -28,3 +33,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: semantic-release
+  distribute:
+    name: 🌍 Distribute
+    needs: deploy
+    uses: cyberskill-world/.github/.github/workflows/distribute.yml@main
+    secrets: inherit
