--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+name: ⚙️ CI/CD
 on:
   push:
     branches:
@@ -13,7 +14,7 @@ jobs:
     name: 🚀 Deploy
     needs: check
     if: >
-      github.event.workflow_run.head_branch == 'main
+      github.event.workflow_run.head_branch == "main"
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout repository
