--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,7 @@ jobs:
   deploy:
     name: 🚀 Deploy
     needs: check
-    if: >
-      github.event.workflow_run.head_branch == "main"
+    if: github.ref == "refs/heads/main"
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout repository
