--- a/.github/workflows/2. merge.yml
+++ b/.github/workflows/2. merge.yml
@@ -1,15 +1,15 @@
-name: 🧪 CI - Check
+name: 🔄 CI - Merge
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - "*"
+  workflow_run:
+    workflows: ["🧪 CI - Check"]
+    types:
+      - completed
 jobs:
   merge:
     name: 🔄 Merge
-    if: github.ref == 'refs/heads/main'
+    if: >
+      github.event.workflow_run.head_branch == 'main' &&
+      github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
