--- a/.github/workflows/3. deploy.yml
+++ b/.github/workflows/3. deploy.yml
@@ -10,6 +10,7 @@ jobs:
   deploy:
     name: 🚀 Deploy
     runs-on: ubuntu-latest
+    needs: check
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
