--- a/.github/workflows/2. rebase.yml
+++ b/.github/workflows/2. rebase.yml
@@ -1,12 +1,12 @@
-name: 🔄 CI - Merge
+name: 🔄 CI - Rebase
 on:
   workflow_run:
     workflows: ["🧪 CI - Check"]
     types:
       - completed
 jobs:
-  merge:
-    name: 🔄 Merge
+  rebase:
+    name: 🔄 Rebase
     if: >
       github.event.workflow_run.head_branch == 'main' &&
       github.event.workflow_run.conclusion == 'success'
@@ -15,8 +15,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Merge main into release
-        uses: cyberskill-world/.github/actions/merge-branch@main
+      - name: Rebase main to release
+        uses: cyberskill-world/.github/actions/rebase-branch@main
         with:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           FROM: main
