feat: please work i need to sleep :((

--- a/.github/workflows/3. deploy.yml
+++ b/.github/workflows/3. deploy.yml
@@ -1,10 +1,13 @@
 name: 🚀 CI - Deploy
 on:
-  push:
-    branches:
-      - release
+  workflow_run:
+    workflows: ["🔄 CI - Rebase"]
+    types:
+      - completed
+  workflow_dispatch:
 jobs:
   check:
+    if: github.ref == 'refs/heads/release'
     name: 🧪 Check
     uses: cyberskill-world/.github/.github/workflows/check.yml@main
     with:
