--- a/.github/workflows/2. merge.yml
+++ b/.github/workflows/2. merge.yml
@@ -1,4 +1,4 @@
-name: 🔄 CI - Rebase
+name: 🔄 CI - Merge
 on:
   workflow_run:
     workflows: ["🧪 CI - Check"]
@@ -9,14 +9,14 @@ jobs:
     if: >
       github.event.workflow_run.head_branch == 'main' &&
       github.event.workflow_run.conclusion == 'success'
-    name: 🔄 Rebase
+    name: 🔄 Merge
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Rebase main to release
-        uses: cyberskill-world/.github/actions/rebase-branch@main
+      - name: Merge main to release
+        uses: cyberskill-world/.github/actions/merge-branch@main
         with:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           FROM: main
