--- a/.github/workflows/3. deploy.yml
+++ b/.github/workflows/3. deploy.yml
@@ -1,15 +1,10 @@
 name: 🚀 CI - Deploy
 on:
-  workflow_run:
-    workflows: ["🔄 CI - Rebase"]
-    types:
-      - completed
-  workflow_dispatch:
+  push:
+    branches:
+      - release
 jobs:
   check:
-    if: >
-      github.event.workflow_run.head_branch == 'main' &&
-      github.event.workflow_run.conclusion == 'success'
     name: 🧪 Check
     uses: cyberskill-world/.github/.github/workflows/check.yml@main
     with:
@@ -21,12 +16,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Checkout release branch
-        run: |
-          git fetch origin
-          git checkout release
-          git pull origin release
 
       - name: Setup Environment and Dependencies
         uses: cyberskill-world/.github/actions/env-deps@main
