--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install semantic-release globally
         run: |
-          pnpm install --global semantic-release@latest @semantic-release/git@latest
+          pnpm install --global semantic-release@latest
 
       - name: Deploy
         env:
