--- a/public/renovate.base.json
+++ b/public/renovate.base.json
@@ -2,6 +2,10 @@
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
         "config:recommended",
+        "docker:pinDigests",
+        "helpers:pinGitHubActionDigests",
+        ":configMigration",
+        ":pinDevDependencies",
         "group:allNonMajor"
     ]
 }
