feat: add rebase before release

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - "*"
+    branches-ignore:
+      - "release"
 jobs:
   check:
     name: 🧪 Check
