--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Env & Deps
-        uses: cyberskill-world/.github/actions/env-deps.yml@main
+        uses: cyberskill-world/.github/actions/env-deps@main
 
       - name: Lint & Build
-        uses: cyberskill-world/.github/actions/lint-build.yml@main
+        uses: cyberskill-world/.github/actions/lint-build@main
