--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,3 +34,10 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: semantic-release
+
+      - name: Create PR to main
+        uses: cyberskill-world/.github/actions/create-pr@main
+        with:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          FROM: release
+          TO: main
