--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,7 +2,7 @@ name: PR
 on:
   workflow_dispatch:
 jobs:
-  check:
+  pr:
     name: PR
     runs-on: ubuntu-latest
     steps:
@@ -10,5 +10,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create PR
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh pr create --base main --head release --title "Add feature X" --body "This PR adds feature X which includes..."
