feat: skip check when PR from release back to main

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ jobs:
   deploy:
     name: 🚀 Deploy
     runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.title != format('chore(CI){0} sync from release to main', ':') }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
