--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,6 +10,7 @@ jobs:
   check:
     name: 🧪 Check
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'from cyberskill-world/release') == false
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
