--- a/public/renovate.base.json
+++ b/public/renovate.base.json
@@ -5,7 +5,6 @@
         "docker:pinDigests",
         "helpers:pinGitHubActionDigests",
         ":configMigration",
-        ":pinDevDependencies",
-        "group:allNonMajor"
+        ":pinDevDependencies"
     ]
 }
