feat: ignore node and express update

--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,8 @@
 {
-    "$schema": "./public/renovate.base.json"
+    "$schema": "./public/renovate.base.json",
+    "ignoreDeps": [
+        "node",
+        "express",
+        "@types/express"
+    ]
 }
