feat: move E_Environment to common typescript

--- a/public/renovate.base.json
+++ b/public/renovate.base.json
@@ -5,6 +5,10 @@
         "docker:pinDigests",
         "helpers:pinGitHubActionDigests",
         ":configMigration",
-        ":pinDevDependencies"
+        ":pinDevDependencies",
+        "group:allNonMajor"
+    ],
+    "ignoreDeps": [
+        "node"
     ]
 }
