feat: disable renovate update node

--- a/public/renovate.base.json
+++ b/public/renovate.base.json
@@ -8,7 +8,8 @@
         ":pinDevDependencies",
         "group:allNonMajor"
     ],
-    "ignoreDeps": [
-        "node"
-    ]
+    "packageRules": [{
+        "packageNames": ["node"],
+        "enabled": false
+    }]
 }
