feat: add install to setupPackages, enhance reset script

--- a/public/renovate.base.json
+++ b/public/renovate.base.json
@@ -8,8 +8,7 @@
         ":pinDevDependencies",
         "group:allNonMajor"
     ],
-    "packageRules": [{
-        "packageNames": ["node"],
+    "nvm": {
         "enabled": false
-    }]
+    }
 }
