feat: disable dockerfile for renovate

--- a/public/renovate.base.json
+++ b/public/renovate.base.json
@@ -8,6 +8,9 @@
         ":pinDevDependencies",
         "group:allNonMajor"
     ],
+    "dockerfile": {
+        "enabled": false
+    },
     "nvm": {
         "enabled": false
     }
