feat: remove wiki

--- a/public/renovate.base.json
+++ b/public/renovate.base.json
@@ -8,10 +8,5 @@
         ":pinDevDependencies",
         "group:allNonMajor"
     ],
-    "dockerfile": {
-        "enabled": false
-    },
-    "nvm": {
-        "enabled": false
-    }
+    "ignoreDeps": ["node"]
 }
