--- a/package.json
+++ b/package.json
@@ -222,7 +222,7 @@
         "commitlint": "tsx src/node/cli/index.ts commitlint"
     },
     "dependencies": {
-        "@antfu/eslint-config": "4.13.1",
+        "@antfu/eslint-config": "4.13.2",
         "@apollo/client": "3.13.8",
         "@apollo/server": "4.12.1",
         "@dotenvx/dotenvx": "1.44.1",
@@ -240,7 +240,7 @@
         "@vitest/browser": "3.1.4",
         "body-parser": "2.2.0",
         "chalk": "5.4.1",
-        "classnames": "2.5.1",
+        "clsx": "2.1.1",
         "compression": "1.8.0",
         "consola": "3.4.2",
         "cookie-parser": "1.4.7",
@@ -302,7 +302,7 @@
         "@commitlint/config-conventional": "19.8.1",
         "@eslint/config-inspector": "1.0.2",
         "@types/body-parser": "1.19.5",
-        "@types/compression": "1.7.5",
+        "@types/compression": "1.8.0",
         "@types/cookie-parser": "1.4.8",
         "@types/cors": "2.8.18",
         "@types/crypto-js": "4.2.2",
@@ -311,9 +311,9 @@
         "@types/express-useragent": "1.0.5",
         "@types/fs-extra": "11.0.4",
         "@types/migrate-mongo": "10.0.5",
-        "@types/node": "22.15.19",
+        "@types/node": "22.15.21",
         "@types/node-persist": "3.1.8",
-        "@types/react": "19.1.4",
+        "@types/react": "19.1.5",
         "@types/react-dom": "19.1.5",
         "@types/unorm": "1.3.31",
         "@types/uuid": "10.0.0",
