feat: ignore node

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
     "$schema": "./public/renovate.base.json",
     "ignoreDeps": [
+        "node",
         "express",
         "@types/express"
     ]
