--- a/package.json
+++ b/package.json
@@ -225,19 +225,29 @@
         "@antfu/eslint-config": "4.14.1",
         "@apollo/client": "3.13.8",
         "@apollo/server": "4.12.2",
+        "@chromatic-com/storybook": "4.0.0",
+        "@commitlint/cli": "19.8.1",
+        "@commitlint/config-conventional": "19.8.1",
         "@dotenvx/dotenvx": "1.44.1",
         "@eddeee888/gcg-typescript-resolver-files": "0.12.1",
-        "@eslint-react/eslint-plugin": "1.51.1",
+        "@eslint-react/eslint-plugin": "1.51.2",
+        "@eslint/config-inspector": "1.1.0",
         "@graphql-codegen/cli": "5.0.7",
         "@graphql-codegen/client-preset": "4.8.2",
         "@microsoft/api-extractor": "7.52.8",
         "@nestjs/common": "11.1.3",
         "@nestjs/core": "11.1.3",
         "@next/eslint-plugin-next": "15.3.3",
+        "@storybook/addon-a11y": "9.0.6",
+        "@storybook/addon-docs": "9.0.6",
+        "@storybook/addon-onboarding": "9.0.6",
+        "@storybook/addon-vitest": "9.0.6",
+        "@storybook/nextjs-vite": "9.0.6",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@vitejs/plugin-react-swc": "3.10.1",
         "@vitest/browser": "3.2.2",
+        "@vitest/coverage-v8": "3.2.2",
         "body-parser": "2.2.0",
         "chalk": "5.4.1",
         "clsx": "2.1.1",
@@ -249,10 +259,12 @@
         "date-fns": "4.1.0",
         "dotenv-cli": "8.0.0",
         "envalid": "8.0.0",
+        "eslint": "9.28.0",
         "eslint-config-next": "15.3.3",
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-react-refresh": "0.4.20",
+        "eslint-plugin-storybook": "9.0.6",
         "express": "4.21.2",
         "express-session": "1.18.1",
         "express-useragent": "1.0.15",
@@ -262,6 +274,7 @@
         "graphql-ws": "6.0.5",
         "i18next": "25.2.1",
         "jsdom": "26.1.0",
+        "lint-staged": "16.1.0",
         "localforage": "1.10.0",
         "migrate-mongo": "12.1.3",
         "modern-normalize": "3.0.1",
@@ -271,6 +284,7 @@
         "mongoose-paginate-v2": "1.9.1",
         "next-intl": "4.1.0",
         "node-fetch": "3.3.2",
+        "node-modules-inspector": "0.6.8",
         "node-persist": "4.0.4",
         "playwright": "1.52.0",
         "postcss-modules": "6.0.1",
@@ -281,7 +295,10 @@
         "react-i18next": "15.5.2",
         "react-icons": "5.5.0",
         "sass": "1.89.1",
+        "simple-git-hooks": "2.13.0",
         "slugify": "1.6.6",
+        "storybook": "9.0.6",
+        "styled-jsx": "5.1.7",
         "tsup": "8.5.0",
         "tsx": "4.19.4",
         "typescript": "5.8.3",
@@ -298,9 +315,6 @@
         "registry": "https://registry.npmjs.org/"
     },
     "devDependencies": {
-        "@commitlint/cli": "19.8.1",
-        "@commitlint/config-conventional": "19.8.1",
-        "@eslint/config-inspector": "1.1.0",
         "@types/body-parser": "1.19.6",
         "@types/compression": "1.8.1",
         "@types/cookie-parser": "1.4.9",
@@ -318,10 +332,6 @@
         "@types/unorm": "1.3.31",
         "@types/uuid": "10.0.0",
         "@types/ws": "8.18.1",
-        "@types/yargs": "17.0.33",
-        "eslint": "9.28.0",
-        "lint-staged": "16.1.0",
-        "node-modules-inspector": "0.6.8",
-        "simple-git-hooks": "2.13.0"
+        "@types/yargs": "17.0.33"
     }
 }
