--- a/package.json
+++ b/package.json
@@ -219,7 +219,8 @@
         "inspect": "tsx src/node/cli/index.ts inspect",
         "test:unit": "tsx src/node/cli/index.ts test:unit",
         "test:e2e": "tsx src/node/cli/index.ts test:e2e",
-        "commitlint": "tsx src/node/cli/index.ts commitlint"
+        "commitlint": "tsx src/node/cli/index.ts commitlint",
+        "storybook": "tsx src/node/cli/index.ts storybook:react"
     },
     "dependencies": {
         "@antfu/eslint-config": "4.14.1",
@@ -243,11 +244,13 @@
         "@storybook/addon-onboarding": "9.0.6",
         "@storybook/addon-vitest": "9.0.6",
         "@storybook/nextjs-vite": "9.0.6",
+        "@storybook/react": "9.0.6",
+        "@storybook/react-vite": "9.0.6",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@vitejs/plugin-react-swc": "3.10.1",
-        "@vitest/browser": "3.2.2",
-        "@vitest/coverage-v8": "3.2.2",
+        "@vitest/browser": "3.2.3",
+        "@vitest/coverage-v8": "3.2.3",
         "body-parser": "2.2.0",
         "chalk": "5.4.1",
         "clsx": "2.1.1",
@@ -305,7 +308,7 @@
         "unorm": "1.6.0",
         "uuid": "11.1.0",
         "vite": "6.3.5",
-        "vitest": "3.2.2",
+        "vitest": "3.2.3",
         "vitest-browser-react": "0.2.0",
         "ws": "8.18.2",
         "yargs": "18.0.0"
