--- a/package.json
+++ b/package.json
@@ -219,14 +219,12 @@
         "inspect": "tsx src/node/cli/index.ts inspect",
         "test:unit": "tsx src/node/cli/index.ts test:unit",
         "test:e2e": "tsx src/node/cli/index.ts test:e2e",
-        "commitlint": "tsx src/node/cli/index.ts commitlint",
-        "storybook": "tsx src/node/cli/index.ts storybook:react"
+        "commitlint": "tsx src/node/cli/index.ts commitlint"
     },
     "dependencies": {
         "@antfu/eslint-config": "4.14.1",
         "@apollo/client": "3.13.8",
         "@apollo/server": "4.12.2",
-        "@chromatic-com/storybook": "4.0.0",
         "@commitlint/cli": "19.8.1",
         "@commitlint/config-conventional": "19.8.1",
         "@dotenvx/dotenvx": "1.44.2",
@@ -239,18 +237,10 @@
         "@nestjs/common": "11.1.3",
         "@nestjs/core": "11.1.3",
         "@next/eslint-plugin-next": "15.3.3",
-        "@storybook/addon-a11y": "9.0.8",
-        "@storybook/addon-docs": "9.0.8",
-        "@storybook/addon-onboarding": "9.0.8",
-        "@storybook/addon-vitest": "9.0.8",
-        "@storybook/nextjs-vite": "9.0.8",
-        "@storybook/react": "9.0.8",
-        "@storybook/react-vite": "9.0.8",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.3.0",
         "@vitejs/plugin-react-swc": "3.10.2",
         "@vitest/browser": "3.2.3",
-        "@vitest/coverage-v8": "3.2.3",
         "body-parser": "2.2.0",
         "chalk": "5.4.1",
         "clsx": "2.1.1",
@@ -267,7 +257,6 @@
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-react-refresh": "0.4.20",
-        "eslint-plugin-storybook": "9.0.8",
         "express": "4.21.2",
         "express-session": "1.18.1",
         "express-useragent": "1.0.15",
@@ -300,7 +289,6 @@
         "sass": "1.89.2",
         "simple-git-hooks": "2.13.0",
         "slugify": "1.6.6",
-        "storybook": "9.0.8",
         "styled-jsx": "5.1.7",
         "tsup": "8.5.0",
         "tsx": "4.20.1",
@@ -328,9 +316,9 @@
         "@types/express-useragent": "1.0.5",
         "@types/fs-extra": "11.0.4",
         "@types/migrate-mongo": "10.0.5",
-        "@types/node": "24.0.0",
+        "@types/node": "24.0.1",
         "@types/node-persist": "3.1.8",
-        "@types/react": "19.1.7",
+        "@types/react": "19.1.8",
         "@types/react-dom": "19.1.6",
         "@types/unorm": "1.3.31",
         "@types/uuid": "10.0.0",
