feat: enhance mongo createSchema

--- a/public/renovate.base.json
+++ b/public/renovate.base.json
@@ -1,10 +1,9 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
-        "config:recommended",
-        "docker:pinDigests",
-        "helpers:pinGitHubActionDigests",
-        ":configMigration",
-        ":pinDevDependencies"
+        "config:best-practices"
+    ],
+    "ignoreDeps": [
+        "node"
     ]
 }
