--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,3 @@
 {
-    "$schema": "./public/renovate.base.json",
-    "ignoreDeps": [
-        "node",
-        "express",
-        "@types/express"
-    ]
+    "$schema": "./public/renovate.base.json"
 }
