feat: enhance renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,11 @@
 {
-    "$schema": "./public/renovate.base.json"
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "extends": [
+        "config:best-practices"
+    ],
+    "ignoreDeps": [
+        "node",
+        "express",
+        "@types/express"
+    ]
 }
