--- a/package.json
+++ b/package.json
@@ -169,6 +169,11 @@
             "import": "./dist/react/toast/index.js",
             "require": "./dist/react/toast/index.cjs"
         },
+        "./react/userback": {
+            "types": "./dist/react/userback/index.d.ts",
+            "import": "./dist/react/userback/index.js",
+            "require": "./dist/react/userback/index.cjs"
+        },
         "./react/index.css": {
             "import": "./dist/react/index.css",
             "require": "./dist/react/index.css"
@@ -236,6 +241,7 @@
         "@graphql-codegen/client-preset": "4.8.3",
         "@nestjs/common": "11.1.3",
         "@nestjs/core": "11.1.3",
+        "@userback/widget": "0.3.11",
         "@vitejs/plugin-react-swc": "3.10.2",
         "body-parser": "2.2.0",
         "chalk": "5.4.1",
@@ -275,7 +281,7 @@
         "unorm": "1.6.0",
         "uuid": "11.1.0",
         "vite": "7.0.0",
-        "ws": "8.18.2",
+        "ws": "8.18.3",
         "yargs": "18.0.0"
     },
     "devDependencies": {
